# token-pipeline

./: .gitignore  README.md  __init__.py  __main__.py  deployment.py  documents.py  lifi_client.py  models.py  options.py  pyproject.toml  pyrightconfig.json
flows/: __init__.py  f01_gather_deployments.py  f02_gather_bridges.py  f03_transfer_instructions.py  f04_chain_assessments.py  f05_audit_research.py  f06_report.py
prompts/: __init__.py  components.py  step1_deployments.py  step2_bridges.py  step3_instructions.py  step4_assessment.py  step5_audit.py  step6_report.py
tasks/: __init__.py  step1.py  step2.py  step3.py  step4.py  step5.py
