[project]
name = "cross-chain-token-pipeline"
version = "0.1.0"
description = "Cross-chain token discovery and security assessment pipeline"
requires-python = ">=3.12"
dependencies = [
    "ai-pipeline-core>=0.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
